crates/decorous-frontend/src/css/snapshots/decorous_frontend__css__parser__tests__can_parse_at_rules-2.snap
---
source: crates/decorous-frontend/src/css/parser.rs
expression: parser.parse()
---
Ok(
    Css {
        rules: [
            At(
                AtRule {
                    name: "media",
                    additional: "(hover: hover) ",
                    contents: Some(
                        [
                            Regular(
                                RegularRule {
                                    selector: Selector {
                                        parts: [
                                            SelectorPart {
                                                text: Some(
                                                    "p",
                                                ),
                                                pseudoes: [],
                                            },
                                        ],
                                    },
                                    declarations: [
                                        Declaration {
                                            name: "color",
                                            values: [
                                                Css(
                                                    "green",
                                                ),
                                            ],
                                        },
                                    ],
                                },
                            ),
                        ],
                    ),
                },
            ),
        ],
    },
)
