crates/decorous-frontend/src/css/snapshots/decorous_frontend__css__parser__tests__can_parse_at_rules.snap
---
source: crates/decorous-frontend/src/css/parser.rs
expression: parser.parse()
---
Css {
    rules: [
        At(
            AtRule {
                name: "import",
                additional: "\"style.css\"",
                contents: None,
            },
        ),
    ],
}
