crates/decorous-frontend/src/css/snapshots/decorous_frontend__css__parser__tests__can_parse_basic_rules.snap
---
source: crates/decorous-frontend/src/css/parser.rs
expression: parser.parse()
---
Ok(
    Css {
        rules: [
            Regular(
                RegularRule {
                    selector: Selector {
                        parts: [
                            SelectorPart {
                                text: Some(
                                    "p",
                                ),
                                pseudoes: [],
                            },
                        ],
                    },
                    declarations: [
                        Declaration {
                            name: "color",
                            values: [
                                Css(
                                    "green",
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
