crates/decorous-frontend/src/css/snapshots/decorous_frontend__css__parser__tests__can_parse_more_complex_declaration_values.snap
---
source: crates/decorous-frontend/src/css/parser.rs
expression: parser.parse()
---
Css {
    rules: [
        Regular(
            RegularRule {
                selector: Selector {
                    parts: [
                        SelectorPart {
                            text: Some(
                                "p",
                            ),
                            pseudoes: [],
                        },
                    ],
                },
                declarations: [
                    Declaration {
                        name: "color",
                        values: [
                            Css(
                                "rgba(1, 2, 3, 4)",
                            ),
                        ],
                    },
                ],
            },
        ),
    ],
}
